--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,96 @@
-.App {
-  text-align: center;
+
+.Login-wrapper {
+    height: 500px;
+    width: 500px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 4%;
+    margin-top: 6%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.Login-container {
+padding:45px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Login-title {
+    color: #7250CF;
+    font-size: 30px;
+    font-weight:bold;
+    text-transform: uppercase
 }
 
-.App-intro {
-  font-size: large;
+.Teams {
+    margin-top: 50px;
+    color: #8C94A8;
+    font-weight:bold;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Team {
+padding-top:10px;
+padding-bottom:10px;
+width:100%;
+clear:both;
 }
+
+.Team-icon {
+    float: left;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    background-color: #BAC3D6;
+    border-radius: 10%;
+    padding: 10px;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    font-size: 0;
+}
+    .Team-icon:first-letter {
+    font-size:50px;
+    }
+
+.Team-name-wrapper {
+    float: left;
+    padding-left:10px;
+}
+
+.Team-name {    
+    font-size: 20px;
+    color: #848CA2;
+    font-weight:bold;
+}
+
+.Team-name-small {
+    font-size: 16px;
+    color: #CCD2DD;
+    font-weight: bold;
+    text-transform:lowercase;
+}
+
+.Team-notifications {
+    float: right;
+    color: #FF7BB7;
+    font-weight:bold;
+}
+
+.New-team-name {
+    float:left;
+    color: #5BE0EE;
+    font-weight:bold;
+    font-size:20px;
+    padding-left:10px;
+}
+
+.SignOut-wrapper {
+    padding-top: 50px;
+    text-align: center;
+}
+
+.btn-signout {
+    background-color: #EDF0FD;
+    color: #909CB4;
+    font-weight:bold;
+    width:120px;
+    padding:5px;
+}
+
